fix(profile-dropdown): fix avatar alignment

--- a/app/client/stylesheets/components/pu-dropdownitem.sass
+++ b/app/client/stylesheets/components/pu-dropdownitem.sass
@@ -28,7 +28,6 @@
 
         figure.pu-avatar
             margin-bottom: -15px
-            margin-top: 5px
             margin-right: 5px
             vertical-align: top
 
